Kubernetes/ingress/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ip-app-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ip-app
  template:
    metadata:
      labels:
        app: ip-app
    spec:
      containers:
      - name: ipapp
        image: harshajain/ip_app:2
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
    name: cip-ipapp
spec:
    selector:
        app: ip-app
    ports:
      - name: http
        port: 8090
        targetPort: 8080
